refactor(client): :recycle: enhance typos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
             "externalTemplate": true,
             "skipStyle": true
         }
-    }
+    },
+    "conventionalCommits.scopes": [
+        "client"
+    ]
 }
